--- a/智能车学习日志/智能车学习日志.md
+++ b/智能车学习日志/智能车学习日志.md
@@ -64,6 +64,22 @@
    - 将公钥添加到github账号中
    - 测试连接：ssh -T
 
+3. - 使用VOFA免费工具进行PID的调参。PID的单个电机的控制，一般采用双环控制，一般为速度环和位置环相结合
+   - 小车的航向角，可以使用imu惯性传感器进行闭环控制
+   - 电机的使用分为步进电机和无刷电机。无刷电机推荐使用ti公司的drv系列。直流电机的话使用TB6612驱动
+   - 学会使用GIT .
 
+1. ## 图像处理
+   ### 搜线方法
+   1. 图像中心搜线法
+   2. 边缘跟踪搜线法
+
+   ### 元素判断
+   3. 十字判断
+     
+   4.  坡道检测
+     - 用TOF激光测距来检测坡道，接近坡道时越来越小。
+     - 接近坡道时，CCD图像向两边变宽。
+     - 圆环识别
 
 
