今天上午添加的一些笔记包括单片机学习，linux常用命令

--- a/单片机课学习笔记/单片机.md
+++ b/单片机课学习笔记/单片机.md
@@ -19,3 +19,26 @@
 5. TF0(Timer 0 overflow flag)
 6. TF1(Timer 1 overflow flag)
 7. PX0(Interrupt Priority)
+
+[[2025-11-21]]
+1. ![定时器TCON寄存器位](assets/image.png)
+2. ![定时器TMOD寄存器位](assets/image-1.png)
+3. ![定时器门控位](assets/image2.png)
+4. 定时器初始化的步骤
+   - 设置定时器的工作方式
+   - 设置定时器的初始值TH0/ TL0, TH1/ TL1。TH0表示定时器0的高8位，TL0表示低8位，TH1/TL1类似。
+     - 分频系数：51单片机定时器使用系统时钟（晶振频率Fosc）经过12分频后的信号作为计数时钟。
+     - 计数周期 = 12 / Fosc（例如Fosc=12MHz，计数周期=1μs）。
+     - 16位模式初值公式：初值 = 65536 - T * (Fosc / 12)，其中T为定时时间（秒）。
+     - TH = (初值 >> 8) & 0xFF，TL = 初值 & 0xFF。
+   - 设置IE、IP寄存器，打开定时器中断及其优先级。
+   - 置位TR0/ TR1，启动定时器。开启总中断
+5. ![TCON](assets/定时器控制寄存器TCON.png)
+6. ![定时器的寄存器配置](assets/定时器的寄存器配置.png)
+7. ![中断允许EA](assets/中断允许EA.png)
+8. ![中断优先级IP](assets/中断优先级IP.png)
+
+## 串口通信
+1. - ![串行通信控制寄存器SCON](assets/串行通信控制寄存器SCON.png)
+   - ![串行通信控制寄存器SCON(1)](assets/串行通信控制寄存器SCON(1).png)
+   - 
