--- a/智能车学习日志/智能车学习日志.md
+++ b/智能车学习日志/智能车学习日志.md
@@ -103,5 +103,21 @@
   - 内存映射的寄存器变量
   - 中断和主程序共享的变量
   - 多线程共享的变量
-  - 循环延时·
-
+  - 循环延时。
+2. Linux常用命令
+   ls - 列出目录内容
+   cd - 更改目录
+   pwd - 显示当前目录路径
+   cp - 复制文件或目录
+   mv - 移动或重命名文件或目录
+   rm - 删除文件或目录
+   mkdir - 创建新目录
+   rmdir - 删除空目录
+   touch - 创建空文件或更新文件的访问和修改时间
+   cat - 显示文件内容
+   more/less - 分页显示文件内容
+   find - 查找文件或目录
+   grep - 在文件中搜索文本模式
+   chmod - 更改文件或目录的权限
+3. reentrant 可重入函数
+   - 函数在被中断后，可以被再次调用而不会引起错误
