2025/12/16我将要写概率论笔记

--- a/单片机课学习笔记/汇编语言学习笔记.md
+++ b/单片机课学习笔记/汇编语言学习笔记.md
@@ -9,3 +9,21 @@
 1. INC R0
    - INC是操作码, 该指令的功能是将寄存器R0的内容加1
    - 命名：INC是increment的缩写，表示递增
+
+1. NOP
+   - NOP是操作码, 该指令的功能是空操作，不进行任何处理
+   - 命名：NOP是no operation的缩写，表示无操作
+
+1. ORG 0000H
+   - ORG是伪指令, 该指令的功能是设置程序的起始地址为0000H
+   - 命名：ORG是origin的缩写，表示起始地址
+
+1. END
+   - 格式：[标号：] END [ 表达式]
+   - END是伪指令, 该指令的功能是标志程序的结束
+   - 命名：END表示程序结束
+
+1. EQU
+   - 格式：x EQU n
+   - EQU是伪指令, 该指令的功能是定义一个常量,将符号x等同于数值n
+   - 命名：EQU是equate的缩写，表示等同
