--- a/单词库/专用名词随手记.md
+++ b/单词库/专用名词随手记.md
@@ -7,3 +7,16 @@
 7. 源极 source：场效应管的一个端口
 8. volatile：易失性的，计算机术语中表示断电后数据会丢失的存储器类型
 9. directory：目录，文件夹
+10. untapped:未开发的
+11. repo:仓库
+12. annotations:注释
+
+
+[[2025-11-28]]
+13. registry:注册表/仓库地址
+14. repository:代码仓库
+15. column:列
+
+[[2025-12-14]]
+16. 反馈 feedback
+    
