--- a/智能车学习日志/智能车学习日志.md
+++ b/智能车学习日志/智能车学习日志.md
@@ -121,3 +121,104 @@
    chmod - 更改文件或目录的权限
 3. reentrant 可重入函数
    - 函数在被中断后，可以被再次调用而不会引起错误
+
+
+# 智能车学习日志
+[[2025-11-22]]
+
+1. 看gitlen这个插件的简介，就当学习英语了
+2. 安装了ubuntu下的vscode和中文输入法。
+
+# 智能车学习日志
+[[2025-11-24]]
+1. 龙芯k0300的适配显示屏型号
+   - 飞凌嵌入式的LCD070CG+1024600FD31
+2. Linux根目录简介
+   - boot目录是存放板子和操作系统启动相关文件的目录
+   - bin目录是存放系统二进制可执行文件的目录
+   - lib目录是存放库函数的目录
+3. 内核编译
+4. QT Creator的安装和使用
+5. 离散数据表![a![离散数据表的开源网址](assets/离散数据表的开源网址.png)
+6. Cmake![cmake配置参考](assets/Cmake配置参考.png)
+7. cmake编译命令
+   - sudo cmake -B build #项目构建
+   - sudo cmake --build build #启动编译
+8. ./main运行可执行程序
+9. Linux地址映射
+10. uintptr_t:一种无符号整数类型，足够大以容纳指针的值。内存映射的时候做页对其操作，能减少内存开销，方便系统对内存的分配和回收
+11. Gtim配置
+12. 5.10版本内核!!![内核网址](assets/内核网址.png)
+
+
+# 智能车学习日志
+[[2025-11-29]]
+1. 配置了docker但是发现有坑，操作还挺麻烦，没有必要
+2. 配置了wsl2，安装了ubuntu20.04
+3. 龙芯交叉编译链loongarch64-linux-gnu-gcc
+
+# 智能车学习日志
+[[2025-12-03]]
+1. 配置了clangd插件
+2. ps -ef 查看进程树
+3. kill -9 pid 强制杀死进程
+4. 学习了龙芯久久派开机自启动程序的方法
+   - 在/etc/rc.local文件中添加启动命令
+
+# 智能车学习日志
+[[2025-12-4]]
+1. 学习了大津法图像二值化
+   - 计算图像的直方图
+   - 计算类间方差
+   - 找到最大类间方差对应的阈值
+2. 八邻域
+   - 先二值化再滤波
+3. 明天我将要学会八邻域连通域算法
+4. 明天我必须要好好学习英语了
+
+# 智能车学习日志
+[[2025-12-5]]
+1. 学习了yolo目标检测算法
+   - yolo是You Only Look Once的缩写
+
+# 智能车学习日志
+[[2025-12-6]]
+1. 能够在电脑上运行yolov8.n模型，并且进行目标检测
+2. default.yaml文件的作用
+   - 配置模型训练的参数
+
+# 智能车学习日志
+[[2025-12-7]]
+1. 八邻域的原理
+2. 八邻域的生长方向
+
+# 智能车学习日志
+[[2025-12-8]]
+1. 学习了sobel算子
+   - 用于边缘检测
+   - 通过计算图像灰度的梯度来检测边缘
+2. 研究学长的视觉代码看到了（寻找图像起始行的左右边界像素点），明天将要看八邻域+sobel算子提取左边界和右边界的方法
+
+# 智能车学习日志
+[[2025-12-15]]
+1. Ubuntu的文件系统结构
+   - 根目录/
+   - bin目录：存放二进制可执行文件
+   - boot目录：存放启动相关文件
+   - dev目录：存放设备文件
+   - etc目录：存放系统配置文件
+   - home目录：存放用户个人文件
+   - lib目录：存放库文件
+   - media目录：存放可移动媒体设备挂载点 
+   - opt目录：存放可选软件包
+   - mnt目录：存放临时挂载点
+2. linux df命令
+   - 显示文件系统的磁盘空间使用情况
+3. linux du命令
+   - 显示文件和目录的磁盘使用情况
+4. linux 磁盘挂载
+   - mount命令用于将文件系统挂载到指定的目录
+   - 通过添加-o iocharset=utf8参数，可以解决中文文件名乱码问题
+   - umount命令用于卸载已挂载的文件系统
+5. mkdir命令
+   - 创建新目录
