--- a/智能车学习日志/智能车学习日志.md
+++ b/智能车学习日志/智能车学习日志.md
@@ -222,3 +222,19 @@
    - umount命令用于卸载已挂载的文件系统
 5. mkdir命令
    - 创建新目录
+
+# 智能车学习日志
+[[2025-12-19]]
+刚睡醒不想学习看一下git视频
+1. checkout命令
+   - 用于切换分支或恢复工作区文件
+   - 示例：git checkout 分支名
+2. reset命令
+   - 用于重置当前分支的HEAD到指定状态
+   - 示例：git reset --hard commit_id
+3. revert命令
+   - 用于撤销指定的提交，生成一个新的提交
+   - 示例：git revert commit_id
+4. rebase命令
+   - 用于将一个分支的更改应用到另一个分支上
+   - 示例：git rebase 目标分支
