--- a/今日必做.md
+++ b/今日必做.md
@@ -1,16 +1,5 @@
-- [ ] 完成模拟电路作业
-- [ ] 完成matlab作业
-- [ ] 完成概率论作业
-- [ ] 学习英语六级
-- [ ] 学习数学竞赛
->以下任务可以明天做
-- [ ] 了解fzero
-- [ ] inline函数学习
-- [ ] 了解什么是内联函数
-- [ ] 实验二第十二题
-- [ ] 实验四第一二题
-- [ ] matlab中abs用于求绝对值
-- [ ] subplot函数学习
-- [ ] exp函数为自然指数函数
-- [ ] plotyy函数是用于绘制双y轴图
-- [ ] fun函数是
+- [ ] 模电作业
+- [ ] 模电实验
+- [ ] 明天九点抢课
+- [ ] 概率论速通课
+- [ ] 复变积分论文
