--- a/课程学习笔记/单片机课学习笔记/单片机.md
+++ b/课程学习笔记/单片机课学习笔记/单片机.md
@@ -1,17 +1,16 @@
+# 单片机基础知识
+
 - 一个字节八位
 - 00H为一个位地址
 
-# 单片机的指令系统
-1. MOV <dest>（目的）, <src>(源)内部RAM数据传送指令
+## 单片机的指令系统
 
+1. MOV `<dest>`（目的）, `<src>`(源)内部RAM数据传送指令
 
+## 中断响应的实时性和不确定性
 
+## 外部中断
 
-# 中断响应的实时性和不确定性！！！
-# 
-
-
-# 外部中断
 1. INT0(external interrupt 0)
 2. INT1(external interrupt 1)
 3. IT(Interrupt type) 0/1
@@ -21,6 +20,7 @@
 7. PX0(Interrupt Priority)
 
 [[2025-11-21]]
+
 1. ![定时器TCON寄存器位](assets/image.png)
 2. ![定时器TMOD寄存器位](assets/image-1.png)
 3. ![定时器门控位](assets/image2.png)
@@ -39,6 +39,7 @@
 8. ![中断优先级IP](assets/中断优先级IP.png)
 
 ## 串口通信
+
 1. - ![串行通信控制寄存器SCON](assets/串行通信控制寄存器SCON.png)
    - ![串行通信控制寄存器SCON(1)](assets/串行通信控制寄存器SCON(1).png)
 
