--- a/课程学习笔记/概率论预习笔记/概率论.md
+++ b/课程学习笔记/概率论预习笔记/概率论.md
@@ -6,3 +6,23 @@
    - P(A - B) = $P(A\overline{B})$ = P(A) - P(AB)
 2. 乘法公式
    - P(AB) = P(A)P(B|A) = P(B)P(A|B)
+3. 二项分布
+   X ~ B(n, p)
+   - 其中n表示试验次数，p表示每次试验成功的概率，X表示成功的次数
+4. 几何分布
+   X ~ G(p)
+   - 其中p表示每次试验成功的概率，X表示第一次成功所需的试验次数
+5. 泊松分布
+   X ~ P(λ)
+   - 其中λ表示单位时间或单位面积内事件发生的平均次数，X表示事件发生的次数
+   - P(X=k) = $\frac{e^{-\lambda}\lambda^{k}}{k!}$
+6. k的阶乘分之一从零到正无穷的和等于e的多少次方
+   - $\sum_{k=0}^{\infty}\frac{1}{k!}$ = e
+7. 连续性随机变量的概率密度函数
+   - f(x) ≥ 0
+   - $\int_{-\infty}^{+\infty}f(x)dx$ = 1
+   - P(a ≤ X ≤ b) = $\int_{a}^{b}f(x)dx$
+   - 不在乎改变概率密度的某一点的值
+   - f(x)不必连续，只需在区间上可积
+   - 连续性X的分布函数F(x)是连续函数。
+8.
